--- a/notebooks/guidedlda-topic-modeling.ipynb
+++ b/notebooks/guidedlda-topic-modeling.ipynb
@@ -30,14 +30,22 @@
     "import joblib\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import nltk\n",
-    "from nltk.tokenize import sent_tokenize\n",
     "pd.set_option('display.width',-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run some files containing custom functions\n",
+    "%run -i '../scripts/helper_functions.py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -126,7 +134,7 @@
        "4  Bank of America Cash Rewards Credit Card  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +156,7 @@
        "(25708, 3)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,37 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sentence(data, review, company):\n",
-    "    \"\"\"Converts reviews to sentences and keeps track of company name for each sentence\"\"\"\n",
-    "    sentence_tokens = [[sentence for sentence in sent_tokenize(data[review].loc[i])] for i in range(len(data))]\n",
-    "    count_sentences = [len(x) for x in sentence_tokens] \n",
-    "    sentences = [sentence for sub_sentence in sentence_tokens for sentence in sub_sentence]\n",
-    "    count_company = [[x] for x in data[company]]\n",
-    "    company_token = []\n",
-    "    for idx, val in enumerate(count_sentences):\n",
-    "        company_token.append(count_company[idx]*val)\n",
-    "    company_names = [name for names in company_token for name in names]\n",
-    "    return sentences, company_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert to dataframe\n",
-    "result = sentence(df, 'reviews', 'company')\n",
+    "# Converts reviews to sentences and to dataframe\n",
+    "result = review_to_sent(df, 'reviews', 'company')\n",
     "df_rev_sen = pd.DataFrame({'sentence': result[0], 'company': result[1]}) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +194,7 @@
        "(111357, 2)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Positive sentiments with s acore greater than 0.4 maps to 1 and 0 otherwise\n",
+    "# Positive sentiments with sacore greater than 0.4 maps to 1 and 0 otherwise\n",
     "df_sentence['positivity'] = np.where(df_sentence['sentiment'] > 0.4, 1, 0)"
    ]
   },
@@ -286,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +375,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -410,7 +399,7 @@
        "(84247, 4)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +421,7 @@
        "Name: positivity, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,54 +432,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentence: Yes, I have one last statement that is not overdue but no apologies about this harassing letter that has no grounds.\n",
-      "Credit card: Walmart MASTERCARD\n",
-      "Sentiment: -0.29\n",
-      "Positivity: 0\n"
+      "Sentence: However, with such a low limit, the way the credit is restored materially affects me.\n",
+      "Credit card: Target Credit Card\n",
+      "Sentiment: 0.4404\n",
+      "Positivity: 1\n"
      ]
     }
    ],
    "source": [
-    "def print_review(index):\n",
-    "    \"\"\"Display each row\"\"\"\n",
-    "    text = df_sentence[df_sentence.index ==index].values.reshape(4)\n",
-    "    sentence = text[0]\n",
-    "    company = text[1]\n",
-    "    sentiment = text[2]\n",
-    "    positivity = text[3]\n",
-    "    print('Sentence:',sentence)\n",
-    "    print('Credit card:',company)\n",
-    "    print('Sentiment:',sentiment)\n",
-    "    print('Positivity:',positivity)\n",
-    "\n",
-    "print_review(100)"
+    "#Display each row\n",
+    "print_sentence(df_sentence, index=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "company\n",
-       "Discover it Secured                         0.540\n",
-       "Discover it Miles                           0.538\n",
-       "Bank of America Cash Rewards Credit Card    0.513\n",
-       "Chase Freedom Unlimited                     0.498\n",
-       "Capital One Venture Rewards                 0.496\n",
+       "Discover it Secured                                   0.540\n",
+       "Discover it Miles                                     0.538\n",
+       "Bank of America Cash Rewards Credit Card              0.513\n",
+       "Chase Freedom Unlimited                               0.498\n",
+       "Capital One Venture Rewards                           0.496\n",
+       "Bank of America Travel Rewards Credit Card            0.495\n",
+       "American Express Blue Cash Preferred                  0.491\n",
+       "American Express Business Gold Rewards Credit Card    0.485\n",
+       "Citi Double Cash Card                                 0.481\n",
+       "TD Cash Visa Credit Card                              0.463\n",
+       "Capital One Quicksilver Rewards                       0.462\n",
+       "Citi Diamond Preferred Card                           0.460\n",
+       "Capital One Platinum                                  0.459\n",
+       "Discover it Cash Back                                 0.443\n",
+       "Chase Sapphire Preffered Card                         0.440\n",
+       "Capital One Secured Credit Card                       0.421\n",
+       "Citi Simplicity Card                                  0.410\n",
+       "BMO MASTERCARD                                        0.372\n",
+       "Citi Platinum World Elite                             0.330\n",
+       "Merrick Bank                                          0.307\n",
+       "RBC VISA                                              0.296\n",
+       "OpenSky Secured Visa Credit Card                      0.288\n",
+       "Chase Amazon Reward Visa                              0.220\n",
+       "Canadian Tire MASTERCARD                              0.155\n",
+       "Costco Anywhere Visa Card by Citi                     0.127\n",
+       "HomeTrust Secured VISA                                0.120\n",
+       "PayPal Credit                                         0.070\n",
+       "TD First Class Travel VISA Infinite Card              0.045\n",
+       "Premier Bankcard                                      0.022\n",
+       "Presidents Choice Financial                           0.022\n",
+       "Credit One Bank                                       0.003\n",
+       "Capital One Platinum Costco MASTERCARD                0.001\n",
+       "American Express Platinum Card                       -0.002\n",
+       "Barclays Bank                                        -0.006\n",
+       "Sears Credit Card                                    -0.020\n",
+       "Target Credit Card                                   -0.033\n",
+       "Walmart MASTERCARD                                   -0.038\n",
+       "Rogers MASTERCARD                                    -0.070\n",
+       "Aspire Visa                                          -0.086\n",
+       "Eppicard                                             -0.097\n",
        "Name: sentiment, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +511,7 @@
    "source": [
     "# Calculate the mean sentiment of all credit card company\n",
     "mean_senti = df_sentence.groupby('company')['sentiment'].mean().sort_values(ascending = False)\n",
-    "round(mean_senti,3).head()"
+    "round(mean_senti,3)"
    ]
   },
   {
@@ -546,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,20 +567,17 @@
     "import nltk\n",
     "import spacy\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
-    "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
-    "from nltk.corpus import wordnet\n",
     "from nltk.corpus import stopwords\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By inspection we create a list of stopwords and add them to the usual nltk stopwords\n",
+    "# By inspection, I will add more stopwords to the default nltk stopwords\n",
     "my_stop_words = ['capital','america', 'redcard', 'target','amazon', 'card', 'credit','merrick', 'discover', 'citi',\n",
     "                 'amex', 'express', 'go', 'paypal', 'chase', 'american', 'one', 'would', 'ask','really', \n",
     "                 'get', 'know', 'express', 'ever','use','say', 'recently', 'also', 'always', 'give',  'tell', \n",
@@ -579,39 +589,6 @@
     "\n",
     "stop_words = stopwords.words('english')\n",
     "stop_words.extend(my_stop_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_wordnet_pos(word):\n",
-    "    \"\"\"Map POS tag to first character lemmatize() accepts\"\"\"\n",
-    "    tag = nltk.pos_tag([word])[0][1][0].upper()\n",
-    "    tag_dict = {\"J\": wordnet.ADJ,\n",
-    "                \"N\": wordnet.NOUN,\n",
-    "                \"V\": wordnet.VERB,\n",
-    "                \"R\": wordnet.ADV}\n",
-    "\n",
-    "    return tag_dict.get(tag, wordnet.NOUN)\n",
-    "\n",
-    "def word_lemmatizer(text):\n",
-    "    \"\"\"Word lemmatization function\"\"\"\n",
-    "    lemmatizer = WordNetLemmatizer()\n",
-    "    text = lemmatizer.lemmatize(text, get_wordnet_pos(text))\n",
-    "    return text\n",
-    "\n",
-    "def my_tokenizer(text):\n",
-    "    \"\"\"Tokenize review text\"\"\"\n",
-    "    text = text.lower() # lower case\n",
-    "    text = re.sub(\"\\d+\", \" \", text) # remove digits\n",
-    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
-    "    token = [word for word in tokenizer.tokenize(text) if len(word)>2]\n",
-    "    token = [word_lemmatizer(x) for x in token]  \n",
-    "    token = [s for s in token if s not in stop_words]\n",
-    "    return token"
    ]
   },
   {
@@ -661,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -697,7 +674,7 @@
        "(84247, 10964)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,30 +1249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def topic_threshold(doc_topic, topic_vector):\n",
-    "    \"\"\"Return the topic number if the topic is more than 70% dominant\"\"\"\n",
-    "    topic_num_list = []\n",
-    "    for i in range(len(topic_vector)):\n",
-    "        topic_num = [idx for idx, value in enumerate(doc_topic[i]) if value > 0.7]\n",
-    "        if topic_num != []:\n",
-    "            topic_num = topic_num[0]\n",
-    "        else:\n",
-    "            topic_num = 'None'\n",
-    "        topic_num_list.append(topic_num)\n",
-    "    return topic_num_list"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_topic = topic_threshold(doc_topic, topic_vector)"
+    "# Assign topic if it is more than 70% dominant\n",
+    "num_topic = topic_threshold(doc_topic, topic_vector, threshold =0.7)"
    ]
   },
   {
