--- a/notebooks/lda-gensim-topic-modeling.ipynb
+++ b/notebooks/lda-gensim-topic-modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run some files containing custom functions\n",
+    "%run -i '../scripts/helper_functions.py'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +141,7 @@
        "4  Bank of America Cash Rewards Credit Card  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +164,7 @@
        "(25708, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,60 +213,31 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Review: Accepted everywhere. Works great.\n",
-      "Rating: 5.0\n",
-      "Credit card: Citi Platinum World Elite\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def print_review(index):\n",
-    "    \"\"\" Display the reviews\"\"\"\n",
-    "    text = df[df.index ==index].values.reshape(3)\n",
-    "    review = text[0]\n",
-    "    rating = text[1]\n",
-    "    company = text[2]\n",
-    "    print('Review:',review)\n",
-    "    print('Rating:',rating)\n",
-    "    print('Credit card:',company)\n",
-    "\n",
-    "print_review(40)"
+    "# Remove wide space in review texts\n",
+    "df['reviews']  = df['reviews'].apply(detokenizer)\n",
+    "df.to_csv('../data/all_data.csv', index = False) # save as csv file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Review: i signed up for my card to have an emergency fund source for big dollar purchases that seem to always happen just before the next paycheck  it has been excellent so far  i've enjoyed having it, the interest rate is fantastic, and the payment terms have been more than fair  i love the rotating categories as well  so far they've been a lot of places that i shop, so i've gotten to get reward points for a lot of my purchases  this is definitely a card i'd recommend\n",
+      "Rating: 5.0\n",
+      "Credit card: Discover it Cash Back\n"
+     ]
+    }
+   ],
    "source": [
-    "from nltk.tokenize.treebank import TreebankWordDetokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def detokenizer(text):\n",
-    "    \"\"\"Remove wide space in review texts\"\"\"\n",
-    "    my_detokenizer = TreebankWordDetokenizer().detokenize(sent_tokenize(text))\n",
-    "    return my_detokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['reviews']  = df['reviews'].apply(detokenizer)\n",
-    "df.to_csv('../data/all_data.csv', index = False) # save as csv file"
+    "#Display the index row\n",
+    "print_review(df, index =8489)"
    ]
   },
   {
@@ -265,7 +246,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df =pd.read_csv('../data/all_data.csv') # reload the data"
+    "# reload the data\n",
+    "df =pd.read_csv('../data/all_data.csv') "
    ]
   },
   {
@@ -366,15 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nltk\n",
-    "from collections import Counter\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
-    "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
     "from nltk.corpus import stopwords\n",
     "import gensim\n",
     "from gensim import corpora, models\n",
@@ -383,29 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pre_process_text(data, text_string):\n",
-    "    \"\"\"clean the review texts\"\"\"\n",
-    "    data[text_string] = data[text_string].str.replace(r\"http\\S+\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"http\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"@\\S+\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"[^A-Za-z0-9(),!?@\\'\\`\\\"\\_\\n]\", \" \")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"@\", \"at\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"\\n\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"\\t\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"\\d+\", \"\")\n",
-    "    data[text_string] = data[text_string].str.lower() \n",
-    "    return data\n",
-    "\n",
-    "df = pre_process_text(df, 'reviews') # apply function to the reviews"
+    "# text preprocessing\n",
+    "df = pre_process_text(df, 'reviews') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,44 +389,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def word_lemmatizer(text):\n",
-    "    \"\"\"Word lemmatization function\"\"\"\n",
-    "    lemmatizer = WordNetLemmatizer()\n",
-    "    text = lemmatizer.lemmatize(text, pos = 'v')\n",
-    "    return text\n",
-    "\n",
-    "def word_stemmer(text):\n",
-    "    \"\"\"Word stemming function\"\"\"\n",
-    "    p_stemmer = PorterStemmer()\n",
-    "    text = p_stemmer.stem(text)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def my_tokenizer(text):\n",
-    "    \"\"\"tokenize reviews and remove stopwords\"\"\"\n",
-    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
-    "    token = [word for word in tokenizer.tokenize(text) if len(word)>2]\n",
-    "    token = [word_lemmatizer(x) for x in token]  \n",
-    "    token = [s for s in token if s not in stop_words]\n",
-    "    return token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# tokenization\n",
     "df['tokens'] =  df['reviews'].apply(my_tokenizer)"
    ]
   },
