--- a/notebooks/Document-sentiment-analysis.ipynb
+++ b/notebooks/Document-sentiment-analysis.ipynb
@@ -32,6 +32,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run some files containing custom functions\n",
+    "%run -i '../scripts/helper_functions.py'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,19 +82,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Great card! We get cash back for our grocery a...</td>\n",
+       "      <td>great card! we get cash back for our grocery a...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>American Express Blue Cash Preferred</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>While traveling we had to keep calling the Cre...</td>\n",
+       "      <td>while traveling we had to keep calling the cre...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Credit One Bank</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Great card to have! Love all the additional cr...</td>\n",
+       "      <td>great card to have! love all the additional cr...</td>\n",
        "      <td>5.0</td>\n",
        "      <td>Capital One Quicksilver Rewards</td>\n",
        "    </tr>\n",
@@ -96,7 +106,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>This is a basic credit card. The cash back dea...</td>\n",
+       "      <td>this is a basic credit card  the cash back dea...</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Bank of America Cash Rewards Credit Card</td>\n",
        "    </tr>\n",
@@ -106,11 +116,11 @@
       ],
       "text/plain": [
        "                                             reviews  \\\n",
-       "0  Great card! We get cash back for our grocery a...   \n",
-       "1  While traveling we had to keep calling the Cre...   \n",
-       "2  Great card to have! Love all the additional cr...   \n",
+       "0  great card! we get cash back for our grocery a...   \n",
+       "1  while traveling we had to keep calling the cre...   \n",
+       "2  great card to have! love all the additional cr...   \n",
        "3  no tengo tanta experiencia asi que no puedo da...   \n",
-       "4  This is a basic credit card. The cash back dea...   \n",
+       "4  this is a basic credit card  the cash back dea...   \n",
        "\n",
        "   rating  \\\n",
        "0     4.0   \n",
@@ -127,7 +137,7 @@
        "4  Bank of America Cash Rewards Credit Card  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,30 +243,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Pre-processing"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pre_process_text(data, text_string):\n",
-    "    \n",
-    "    data[text_string] = data[text_string].str.replace(r\"http\\S+\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"http\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"@\\S+\", \"\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"[^A-Za-z0-9(),!?@\\'\\`\\\"\\_\\n]\", \" \")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"@\", \"at\")\n",
-    "    data[text_string] = data[text_string].str.replace(r\"\\n\", \"\")\n",
-    "    #data[text_string] = data[text_string].str.replace(r\"\\d+\", \"\")\n",
-    "    data[text_string] = data[text_string].str.lower() \n",
-    "    return data\n",
-    "\n",
+    "# Data Pre-processing\n",
     "df = pre_process_text(df, 'reviews')"
    ]
   },
