--- a/notebooks/guidedlda-topic-modeling.ipynb
+++ b/notebooks/guidedlda-topic-modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "4     0.7845  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,22 +438,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Unfair, unjust, unworthy.'"
+       "'After using other credit cards with travel rewards benefits, Capital One Venture has the best and easiest to use benefit program, hands down.'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sentence[df_sentence.company =='Capital One Secured Credit Card'].sentence.loc[78387]"
+    "df_sentence[df_sentence.company =='Capital One Quicksilver Rewards'].sentence.loc[78410]"
    ]
   },
   {
@@ -1447,7 +1447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/creditcard_topics.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -1562,13 +1571,33 @@
        "4      0.7269  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Excellent rewards and redeem easily when making purchases in Walmart stores.'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sentences.loc[0]"
    ]
   },
   {
