--- a/notebooks/guidedlda-topic-modeling.ipynb
+++ b/notebooks/guidedlda-topic-modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,18 @@
     "import joblib\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import guidedlda\n",
+    "import nltk\n",
+    "import spacy\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from nltk.corpus import stopwords\n",
+    "from collections import Counter\n",
     "pd.set_option('display.width',-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +409,7 @@
        "4     0.7845  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,71 +463,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove all the neutral sentiments with score of zero\n",
-    "#df_sentence = df_sentence[df_sentence.sentiment !=0].reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Positive sentiments with sacore greater than 0.4 maps to 1 and 0 otherwise\n",
-    "#df_sentence['positivity'] = np.where(df_sentence['sentiment'] > 0.4, 1, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#df_sentence.positivity.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Display each row\n",
-    "#print_sentence(df_sentence, index=600)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the mean sentiment of all credit card company\n",
-    "# mean_senti = df_sentence.groupby('company')['sentiment'].mean().sort_values(ascending = False)\n",
-    "# round(mean_senti,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# df_sentence.sentiment.hist(bins = 'auto')\n",
-    "# plt.xlabel('sentiment')\n",
-    "# plt.ylabel('count')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -530,21 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import guidedlda\n",
-    "import nltk\n",
-    "import spacy\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from nltk.corpus import stopwords\n",
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -605,22 +532,6 @@
    "metadata": {},
    "source": [
     "# Topic Modeling with LDA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def doc_term_matrix(data, text):\n",
-    "    \"\"\"Returns document term matrix, vocabulary, and word id\"\"\"\n",
-    "    counter = CountVectorizer(tokenizer=my_tokenizer, ngram_range = (1,1))\n",
-    "    X = counter.fit_transform(data[text]).toarray()\n",
-    "    bow_docs = pd.DataFrame(X, columns=counter.get_feature_names())\n",
-    "    vocab = tuple(bow_docs.columns)\n",
-    "    word2id = dict((v, idx) for idx, v in enumerate(vocab))\n",
-    "    return X, vocab, word2id"
    ]
   },
   {
@@ -1598,33 +1509,6 @@
    ],
    "source": [
     "df.sentences.loc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def credit_card(data):\n",
-    "    \"\"\"Returns topics, topic_sentiments, and credit cards\"\"\"\n",
-    "    topic_list = data.topics.unique()\n",
-    "    card_lists = []\n",
-    "    topic_sentiment = []\n",
-    "    topics = []\n",
-    "    for i in range(len(topic_list)):\n",
-    "        specific = df[df.topics ==topic_list[i]][['topics','creditcards','sentiments']].reset_index(drop=True)\n",
-    "        group_table = specific.groupby('creditcards')['sentiments'].mean().sort_values(ascending = False)\n",
-    "        card_lists.append(list(group_table.index))\n",
-    "        topic_sentiment.append(group_table.values.round(2))\n",
-    "        for j in range(len(group_table)):\n",
-    "            topics.append(topic_list[i])\n",
-    "            \n",
-    "    # Convert the list of lists to list\n",
-    "    card_list = [card for sub_card in card_lists for card in sub_card]\n",
-    "    topic_sen = [sen for sub_sen in topic_sentiment for sen in sub_sen]\n",
-    "    \n",
-    "    return topics, card_list, topic_sen"
    ]
   },
   {
