--- a/notebooks/guidedlda-topic-modeling.ipynb
+++ b/notebooks/guidedlda-topic-modeling.ipynb
@@ -1959,11 +1959,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyLDAvis' has no attribute 'save_png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/Documents/Python/ML/Insight/scripts/helper_functions.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpyLDAvis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_png\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpanel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lda.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyLDAvis' has no attribute 'save_png'"
+     ]
+    }
+   ],
    "source": [
-    "pyLDAvis.save_html(panel, 'lda.html')"
+    "pyLDAvis.save_png(panel, 'lda.png')"
    ]
   },
   {
