--- a/notebooks/guidedlda-topic-modeling.ipynb
+++ b/notebooks/guidedlda-topic-modeling.ipynb
@@ -1959,23 +1959,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'pyLDAvis' has no attribute 'save_png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m~/Documents/Python/ML/Insight/scripts/helper_functions.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpyLDAvis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_png\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpanel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lda.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pyLDAvis' has no attribute 'save_png'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pyLDAvis.save_png(panel, 'lda.png')"
+    "#pyLDAvis.save_html(panel, 'lda.html')"
    ]
   },
   {
