--- a/notebooks/guidedlda-topic-modeling.ipynb
+++ b/notebooks/guidedlda-topic-modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "4     0.7845  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,22 +444,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'After using other credit cards with travel rewards benefits, Capital One Venture has the best and easiest to use benefit program, hands down.'"
+       "'I think my only issue with the card is that 1.5% is a comparatively low cash back rate, but I think the convenience of no rotating categories to worry about offsets that.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sentence[df_sentence.company =='Capital One Quicksilver Rewards'].sentence.loc[78410]"
+    "df_sentence[df_sentence.company =='Capital One Quicksilver Rewards'].sentence.loc[85035]"
    ]
   },
   {
@@ -1383,7 +1383,7 @@
     "             4: 'Interest Rate',\n",
     "             5: 'User Recommendation',\n",
     "             6: 'Fraud Issues',\n",
-    "             7: 'Cash Back and Rewards',\n",
+    "             7: 'Cash Back Rewards',\n",
     "             8: 'Travel Rewards',\n",
     "             9: 'Build or Rebuild Credit'}"
    ]
