--- a/notebooks/04-text-classification.ipynb
+++ b/notebooks/04-text-classification.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,13 +993,15 @@
     }
    ],
    "source": [
-    "importances = gsearch_rf.best_estimator_.feature_importances_\n",
-    "features = X_train.columns\n",
-    "fea_imp_df = pd.DataFrame({'Features': features, \n",
-    "                              'Importances': importances}).sort_values('Importances', ascending=False)\n",
+    "# Feature importance\n",
+    "features = X_train_prepared.columns\n",
+    "importances = rsearch_rf.best_estimator_.feature_importances_\n",
+    "importance_df = pd.DataFrame({'Features': features, 'Importances': importances})\n",
+    "importance_df = importance_df.sort_values('Importances', ascending=False)\n",
+    "\n",
     "# Bar plot\n",
     "plt.figure(figsize = (15,8))\n",
-    "sns.barplot(data = fea_imp_df,  x = 'Importances', y = 'Features')"
+    "sns.barplot(data = importance_df,  x = 'Importances', y = 'Features')"
    ]
   },
   {
